added form submission to google sheet

--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
 
                     <div class="userInfoDiv">
                       <div class="mb-3 px-2">
-                        <label for="name">Name *</label> <br />
+                        <label for="person_name">Name *</label> <br />
                         <!-- <textarea
                           type="text"
                           class="form-control"
                           id="name"
                         ></textarea> -->
-                        <input type="text" id="name" name="name" required />
+                        <input type="text" id="person_name" name="person_name" required />
                       </div>
                       <div class="mb-3 px-2">
                         <label for="phone_number">Phone Number *</label> <br />
@@ -280,6 +280,9 @@
                           class="form-control"
                           id="note"
                         ></textarea>
+                      </div>
+                      <div class="mb-3 px-2">
+                        <i>Taxes and delivery fee may apply!</i>
                       </div>
                     </div>
                   </div>
@@ -340,7 +343,7 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <div class="row foodItem">
+                    <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
                           Veggie Fried Momo
@@ -366,7 +369,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <hr class="foodItemHr" /> -->
 <!-- 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
@@ -452,7 +455,7 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <div class="row foodItem">
+                    <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
                           Chicken Fried Momo
@@ -478,7 +481,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <hr class="foodItemHr" /> -->
 
                     <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
@@ -570,7 +573,7 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <div class="row foodItem">
+                    <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
                           Veggie Fried Momo | Small Tray (40 pieces)
@@ -597,7 +600,7 @@
                       </div>
                     </div>
                     <hr class="foodItemHr" />
-
+ -->
 
 
                     
@@ -628,7 +631,7 @@
                       </div>
                     </div>
                     <hr class="foodItemHr" />
-
+<!-- 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
@@ -655,7 +658,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" /> 
+                    <hr class="foodItemHr" />  -->
 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
@@ -741,7 +744,7 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <div class="row foodItem">
+                    <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
                           Chicken Fried Momo | Small Tray (40 pieces)
@@ -767,7 +770,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <hr class="foodItemHr" /> -->
 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
@@ -797,7 +800,7 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <div class="row foodItem">
+                    <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
                           Chicken Fried Momo | Large Tray (80 pieces)
@@ -824,7 +827,7 @@
                       </div>
                     </div>
 
-                    <hr class="foodItemHr" />
+                    <hr class="foodItemHr" /> -->
 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
