Removed hygiene and testimonials

--- a/index.html
+++ b/index.html
@@ -1923,7 +1923,7 @@
       <h1 class="hygiene-title">
         <span><b>HYGIENE</b></span>
       </h1>
-      <div class="eatSure container">
+      <!-- <div class="eatSure container">
         <div class="row">
           <div class="col-sm-2 col-12">
             <img
@@ -2037,7 +2037,7 @@
             >
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container safetyMeasuresDiv">
         <p class="safetyMeasuresPara">
@@ -2094,7 +2094,7 @@
     </section>
 
     <!-- TESTIMONIALS SECTION -->
-    <section id="healthySection" class="testimonials">
+    <!-- <section id="healthySection" class="testimonials">
       <h1 class="hygiene-title">
         <span><b>TESTIMONIALS</b></span>
       </h1>
@@ -2203,7 +2203,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- FOOTER STARTS HERE -->
 
