--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         ></textarea>
                       </div>
                       <div class="mb-3 px-2">
-                        <label for="note">Note (optional)</label> <br />
+                        <label for="note">Note (optional/ dietry restriction/ allergen)</label> <br />
                         <textarea
                           type="text"
                           class="form-control"
