Added chowmien and chicken chili

--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <!-- <div class="row foodItem">
+                    <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Fried Momo
+                          Veggie Chowmein
                           <span>
                             <img
                               class="vegIcon"
@@ -369,7 +369,7 @@
                           </span>
                         </p>
                         <p class="text-muted-small">
-                          <b>$</b> 13
+                          <b>$</b> 12
                         </p>
                       </div>
                       <div class="col-3 addCol">
@@ -382,7 +382,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" /> -->
+                    <hr class="foodItemHr" />
 <!-- 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
@@ -468,10 +468,10 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <!-- <div class="row foodItem">
+                    <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Chicken Fried Momo
+                          Chicken Chilli
                           <span>
                             <img
                               class="nonVegIcon"
@@ -494,7 +494,7 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" /> -->
+                    <hr class="foodItemHr" />
 
                     <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
