Categorized and added chicken chili

--- a/index.html
+++ b/index.html
@@ -557,11 +557,12 @@
               <div class="col-sm-6 col-12">
                 <div class="card">
                   <h2 class="card-title">Catering / Party</h2>
+                  <!-- <h6 class="sub-card-title">Small Tray</h6> -->
                   <div class="card-body">
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Steamed Momo | Small Tray (40 pieces)
+                          Veggie Steamed Momo | Small (40 pcs)
                           <span>
                             <img
                               class="vegIcon"
@@ -584,12 +585,12 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <!-- <hr class="foodItemHr" /> -->
 
                     <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Fried Momo | Small Tray (40 pieces)
+                          Veggie Fried Momo | Small (40 pcs)
                           <span>
                             <img
                               class="vegIcon"
@@ -620,7 +621,7 @@
                    <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Steamed Momo | Large Tray (80 pieces)
+                          Veggie Steamed Momo | Large (80 pcs)
                           <span>
                             <img
                               class="vegIcon"
@@ -648,7 +649,7 @@
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Fried Momo | Large Tray (80 pieces)
+                          Veggie Fried Momo | Large (80 pcs)
                           <span>
                             <img
                               class="vegIcon"
@@ -676,7 +677,7 @@
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Chowmein | Small Tray (serves 9-10 people)
+                          Veggie Chowmein | Small (9-10 people)
                           <span>
                             <img
                               class="vegIcon"
@@ -699,12 +700,12 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <!-- <hr class="foodItemHr" /> -->
 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Veggie Chowmein | Large Tray (serves 18-20 people)
+                          Veggie Chowmein | Large (18-20 people)
                           <span>
                             <img
                               class="vegIcon"
@@ -732,7 +733,63 @@
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Chicken Steamed Momo | Small Tray (40 pieces)
+                          Veggie Fried Rice | Small
+                          <span>
+                            <img
+                              class="vegIcon"
+                              src="./images/veg.webp"
+                              alt="veg-icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 70
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
+                    </div>
+                    <!-- <hr class="foodItemHr" /> -->
+
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Veggie Fried Rice | Large
+                          <span>
+                            <img
+                              class="vegIcon"
+                              src="./images/veg.webp"
+                              alt="veg-icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 130
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
+                    </div>
+                    <hr class="foodItemHr" />
+
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Chicken Steamed Momo | Small (40 pcs)
                           <span>
                             <img
                               class="nonVegIcon"
@@ -755,12 +812,12 @@
                         ></span>
                       </div>
                     </div>
-                    <hr class="foodItemHr" />
+                    <!-- <hr class="foodItemHr" /> -->
 
                     <!-- <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Chicken Fried Momo | Small Tray (40 pieces)
+                          Chicken Fried Momo | Small (40 pcs)
                           <span>
                             <img
                               class="nonVegIcon"
@@ -788,7 +845,7 @@
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Chicken Steamed Momo | Large Tray (80 pieces)
+                          Chicken Steamed Momo | Large (80 pcs)
                           <span>
                             <img
                               class="nonVegIcon"
@@ -813,10 +870,13 @@
                     </div>
                     <hr class="foodItemHr" />
 
-                    <!-- <div class="row foodItem">
+
+
+
+                    <div class="row foodItem">
                       <div class="col-9 foodItemName">
                         <p>
-                          Chicken Fried Momo | Large Tray (80 pieces)
+                          Chicken Chilli | Small Tray
                           <span>
                             <img
                               class="nonVegIcon"
@@ -838,9 +898,35 @@
                           ><i class="fas fa-plus"></i
                         ></span>
                       </div>
+                    </div>                    
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Chicken Chilli | Large Tray
+                          <span>
+                            <img
+                              class="nonVegIcon"
+                              src="./images/non-veg.webp"
+                              alt="non-veg icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 150
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
                     </div>
 
-                    <hr class="foodItemHr" /> -->
+                    <hr class="foodItemHr" />
 
                     <div class="row foodItem">
                       <div class="col-9 foodItemName">
