--- a/index.html
+++ b/index.html
@@ -382,6 +382,36 @@
                         ></span>
                       </div>
                     </div>
+
+                    <hr class="foodItemHr" />
+
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Paneer Chilli
+                          <span>
+                            <img
+                              class="vegIcon"
+                              src="./images/veg.webp"
+                              alt="veg-icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 12
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
+                    </div>
+
                     <hr class="foodItemHr" />
 <!-- 
                     <div class="row foodItem">
@@ -903,6 +933,62 @@
                       <div class="col-9 foodItemName">
                         <p>
                           Chicken Chilli | Large Tray
+                          <span>
+                            <img
+                              class="nonVegIcon"
+                              src="./images/non-veg.webp"
+                              alt="non-veg icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 150
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
+                    </div>
+
+                    <hr class="foodItemHr" />
+
+
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Chicken Biryani | Small Tray
+                          <span>
+                            <img
+                              class="nonVegIcon"
+                              src="./images/non-veg.webp"
+                              alt="non-veg icon"
+                            />
+                          </span>
+                        </p>
+                        <p class="text-muted-small">
+                          <b>$</b> 80
+                        </p>
+                      </div>
+                      <div class="col-3 addCol">
+                        <span class="menuBtn minus"
+                          ><i class="fas fa-minus"></i
+                        ></span>
+                        <span class="quantity">0</span>
+                        <span class="menuBtn plus"
+                          ><i class="fas fa-plus"></i
+                        ></span>
+                      </div>
+                    </div>                    
+                    <div class="row foodItem">
+                      <div class="col-9 foodItemName">
+                        <p>
+                          Chicken Biryani | Large Tray
                           <span>
                             <img
                               class="nonVegIcon"
